evaluation/test_suite/positive/ub45/1.c
#include <stdio.h>

int main()
{
    int x = 0;
    int y = 1;
    printf("%ld\n", &x - &y);
}
